--- a/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - LiveChat</p>
+                    <p>&copy; @DateTime.Now.Year - <strong>LiveChat</strong> <span class="glyphicon glyphicon-bullhorn"></span></p>
                 </div>
             </div>
         </footer>
