--- a/LiveChat/LiveChat.App/Content/LiveChat.css
+++ b/LiveChat/LiveChat.App/Content/LiveChat.css
@@ -1,6 +1,13 @@
 ﻿.discussion {
     margin: 2em auto;
     padding: 0 1em;
+    max-height: 20em;
+    overflow-y: auto;
+    background-color: rgb(246, 246, 246);
+}
+
+.discussion li:not(:last-child) {
+    border-bottom: 1px dashed rgb(170, 170, 170);
 }
 
 #users-list {
