--- a/LiveChat/LiveChat.App/Content/LiveChat.css
+++ b/LiveChat/LiveChat.App/Content/LiveChat.css
@@ -59,3 +59,19 @@
     z-index: 2;
     display: none;
 }
+
+
+footer .float-left,
+	footer .float-right {
+		float: none;
+	}
+
+	footer {
+		text-align: center;
+		height: auto;
+		padding: 10px 0;
+	}
+
+		footer p {
+			margin: 0;
+		}
