--- a/LiveChat/LiveChat.App/Views/Error/Index.cshtml
+++ b/LiveChat/LiveChat.App/Views/Error/Index.cshtml
@@ -1,33 +1,12 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_ErrorLayout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Page not found</title>
-</head>
-<body>
-    <div class="container" style="margin: 5em;">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="error-template">
-                    <h1>Oops!</h1>
-                    <div class="error-details">
-                        Sorry, an error has occured!
-                    </div>
-                    <div class="error-actions">
-                        <a href="mailto:k.smykala@gmail.com" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    @Styles.Render("~/Content/404")
-    @Scripts.Render("~/bundles/jquery")
-    @Styles.Render("~/Content/bootstrap")
-</body>
-</html>
+<h1>Ooops!</h1>
+<div>
+    We're so sorry, but some error has occured...
+</div>
+<div>
+    Please, contact with our support team 
+</div>
+<div><h1 class="glyphicon glyphicon-hand-down"></h1></div>
