--- a/LiveChat/LiveChat.App/Views/Chat/UsersListChat.cshtml
+++ b/LiveChat/LiveChat.App/Views/Chat/UsersListChat.cshtml
@@ -11,7 +11,17 @@
     <ul class="list-group">
         @foreach (var user in @Model)
         {
-            <a href="@Url.Action("PrivateChat", new { userId = user.UserId })" class="list-group-item">@user.UserName</a>
+            <a id="@user.UserId-user-list-element" href="@Url.Action("PrivateChat", new { userId = user.UserId })" class="list-group-item">
+                @user.Name
+                @if (user.IsConnected)
+                {
+                    <span class="badge" style="background-color: rgb(60, 189, 61)"><span class="glyphicon glyphicon-user"></span></span>
+                }
+                else
+                {
+                    <span class="badge" style=" display: none; background-color: rgb(60, 189, 61)"><span class="glyphicon glyphicon-user"></span></span>
+                }
+            </a>
         }
     </ul>
 </div>
