--- a/LiveChat/LiveChat.App/Content/LiveChat.css
+++ b/LiveChat/LiveChat.App/Content/LiveChat.css
@@ -76,11 +76,24 @@ footer .float-left,
 			margin: 0;
 		}
 
-.user-list-group-item > .badge {
+.user-list-group-item > .connected {
     border-color: rgba(10, 177, 51, 0.9);
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(34, 220, 79, 0.69);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(34, 220, 79, 0.69);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(34, 220, 79, 0.69);
     outline: 0;
     outline: thin dotted \9;
+}
+
+.user-list-group-item > .disconnected {
+    border-color: rgba(54, 54, 54, 0.9);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(183, 183, 183, 0.69);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(183, 183, 183, 0.69);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(183, 183, 183, 0.69);
+    outline: 0;
+    outline: thin dotted \9;
+}
+
+.list-group-item > .badge + .badge {
+    margin-right: 0;
 }
