--- a/LiveChat/LiveChat.App/Views/Chat/UsersListChat.cshtml
+++ b/LiveChat/LiveChat.App/Views/Chat/UsersListChat.cshtml
@@ -15,11 +15,11 @@
                 @user.Name
                 @if (user.IsConnected)
                 {
-                    <span class="badge" style="background-color: rgb(60, 189, 61)"><span class="glyphicon glyphicon-user"></span></span>
+                    <span class="badge" style="background-color: #3cbd3d"><span class="glyphicon glyphicon-user"></span></span>
                 }
                 else
                 {
-                    <span class="badge" style=" display: none; background-color: rgb(60, 189, 61)"><span class="glyphicon glyphicon-user"></span></span>
+                    <span class="badge" style="display:none; background-color: #3cbd3d"><span class="glyphicon glyphicon-user"></span></span>
                 }
             </a>
         }
