--- a/LiveChat/LiveChat.App/Views/Error/PageNotFound.cshtml
+++ b/LiveChat/LiveChat.App/Views/Error/PageNotFound.cshtml
@@ -2,10 +2,9 @@
     Layout = "~/Views/Shared/_ErrorLayout.cshtml";
     ViewBag.Title = "Ooops!";
 }
-
 <h1>Ooops!</h1>
 <div>
-    We're so sorry, but some error has occured...
+    We're so sorry, but the page does'nt exist...
 </div>
 <div>
     Please, contact with our support team 
