--- a/LiveChat/LiveChat.App/Views/Shared/_ErrorLayout.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_ErrorLayout.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Page not found</title>
+    <title>@ViewBag.Title</title>
 </head>
 <body>
     <div class="container" style="margin: 5em;">
